--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+__pycache__/
+.pytest_cache/
+.idea/
+.vscode/
+.venv/
+venv/
+.DS_Store
+*.log
+*.pyc
+*.pyo
+*/__pycache__/
+tests/resources/*.png
 # Virtual Environment
 .venv/
 venv/
