Refactor: СѓР»СѓС‡С€РµРЅРёРµ РєР°С‡РµСЃС‚РІР° РєРѕРґР°, РґРѕР±Р°РІР»РµРЅРёРµ type hints, РёСЃРїСЂР°РІР»РµРЅРёРµ РѕРїРµС‡Р°С‚РѕРє

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pytest
-selenium
-webdriver-manager
-Appium-Python-Client
+pytest>=7.4.0
+selenium>=4.15.0
+webdriver-manager>=4.0.0
+Appium-Python-Client>=3.1.0
